<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.InfoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-115dp"
        tools:layout_editor_absoluteY="68dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/detail_image"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv1"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_yea"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detail_image" />

            <TextView
                android:id="@+id/views_count"
                android:layout_width="30dp"
                android:layout_height="16dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="16dp"
                android:text="@string/count"
                android:textColor="#000000"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/iv1"
                app:layout_constraintTop_toBottomOf="@id/detail_image" />

            <TextView
                android:id="@+id/tv1"
                android:layout_width="90dp"
                android:layout_height="16dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/views"
                android:textColor="#000000"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/views_count"
                app:layout_constraintTop_toBottomOf="@id/detail_image" />

            <TextView
                android:id="@+id/tv2"
                android:layout_width="150dp"
                android:layout_height="16dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/data_str"
                android:textColor="#80000000"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detail_image" />

            <ImageView
                android:id="@+id/iv2"
                android:layout_width="12dp"
                android:layout_height="14dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_location"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv1" />

            <TextView
                android:id="@+id/detail_location"
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="8dp"
                android:text="@string/location"
                android:textColor="#000000"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/iv2"
                app:layout_constraintTop_toBottomOf="@id/views_count" />

            <TextView
                android:id="@+id/data"
                android:layout_width="150dp"
                android:layout_height="18dp"
                app:layout_constraintTop_toBottomOf="@id/tv2"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp"
                android:textSize="14sp"
                android:text="@string/data"
                android:gravity="center"
                android:textColor="#000000"/>
            <ImageButton
                android:id="@+id/call_ib"
                android:layout_width="171dp"
                android:layout_height="52dp"
                app:layout_constraintTop_toBottomOf="@id/detail_location"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="24dp"
                android:layout_marginTop="15dp"
                android:foregroundGravity="center"
                android:src="@drawable/ic_call"/>
            <ImageButton
                android:id="@+id/send_message_ib"
                android:layout_width="151dp"
                android:layout_height="52dp"
                app:layout_constraintTop_toBottomOf="@id/detail_location"
               app:layout_constraintStart_toEndOf="@id/call_ib"
                android:layout_marginStart="24dp"
                android:layout_marginTop="15dp"
                android:foregroundGravity="center"
                android:src="@drawable/ic_send_message"/>
            <TextView
                android:id="@+id/detail_title"
                android:layout_width="225dp"
                android:layout_height="30dp"
                app:layout_constraintTop_toBottomOf="@id/call_ib"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="15dp"
                android:layout_marginStart="24dp"
                android:text="@string/hint"/>
            <TextView
                android:id="@+id/tv3"
                android:layout_width="20dp"
                android:layout_height="24dp"
                app:layout_constraintTop_toBottomOf="@id/send_message_ib"
                app:layout_constraintStart_toEndOf="@id/detail_title"
                android:layout_marginTop="15dp"
                android:layout_marginStart="40dp"
                android:text="@string/str_ot"
                android:gravity="center"/>
            <TextView
                android:id="@+id/detail_price"
                android:layout_width="40dp"
                android:layout_height="24dp"
                app:layout_constraintTop_toBottomOf="@id/send_message_ib"
                app:layout_constraintStart_toEndOf="@id/tv3"
                android:layout_marginTop="15dp"
                android:layout_marginStart="4dp"
                android:textSize="14sp"
                android:textColor="#000000"
                android:text="@string/prise_size"
                android:gravity="center"/>
            <TextView
                android:id="@+id/detail_currency"
                android:layout_width="32dp"
                android:layout_height="18dp"
                app:layout_constraintTop_toBottomOf="@id/detail_price"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="60dp"
                android:layout_marginTop="5dp"
                android:textSize="14sp"
                android:textColor="#000000"
                android:text="@string/kgs"/>
            <TextView
                android:id="@+id/tv4"
                android:layout_width="45dp"
                android:layout_height="16dp"
                app:layout_constraintTop_toBottomOf="@id/detail_currency"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="60dp"
                android:layout_marginTop="5dp"
                android:text="@string/quantity"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/detail_description"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintTop_toBottomOf="@id/detail_title"
                android:layout_marginTop="50dp"
                android:text="@string/hint"
                android:gravity="center"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <include layout="@layout/toolbar" />
</androidx.constraintlayout.widget.ConstraintLayout>