<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/items_card_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="4dp">

            <ImageView
                android:id="@+id/items_image_view"
                android:layout_width="165dp"
                android:layout_height="170dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/price"
                android:layout_width="40dp"
                android:layout_height="18dp"
                android:layout_marginTop="3dp"
                android:gravity="center"
                android:text="@string/price"
                android:textColor="#4D000000"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/items_image_view" />

            <TextView
                android:id="@+id/price_size"
                android:layout_width="40dp"
                android:layout_height="18dp"
                android:layout_marginTop="3dp"
                android:gravity="center"
                android:text="@string/prise_size"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/price" />

            <TextView
                android:id="@+id/currency"
                android:layout_width="40dp"
                android:layout_height="18dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="3dp"
                android:gravity="center"
                android:text="@string/kgs"
                android:textColor="#000000"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@id/price_size"
                app:layout_constraintTop_toBottomOf="@id/price" />

            <TextView
                android:id="@+id/quantity"
                android:layout_width="50dp"
                android:layout_height="18dp"
                android:layout_marginTop="3dp"
                android:gravity="center"
                android:text="@string/quantity"
                android:textColor="#4D000000"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/price" />

            <TextView
                android:id="@+id/items_title_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="3dp"
                android:gravity="center"
                android:hint="@string/hint"
                android:textColor="#000000"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/price_size" />
            <ImageView
                android:id="@+id/location_image"
                android:layout_width="wrap_content"
                android:layout_height="14dp"
                app:layout_constraintTop_toBottomOf="@id/items_title_text_view"
                app:layout_constraintStart_toStartOf="parent"
               android:layout_marginTop="6dp"
                android:src="@drawable/ic_location"
                />
            <TextView
                android:id="@+id/items_location_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="3dp"
                android:gravity="center"
                android:text="@string/location"
                android:textColor="#B80F0A"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@id/location_image"
                app:layout_constraintTop_toBottomOf="@id/items_title_text_view"
                app:layout_constraintBottom_toBottomOf="parent"
               />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>